--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 backend/dist/
 backend/node_modules/
 backend/build/
-backend/test
+backend/test/
+
+frontend/dist/
+frontend/node_modules/
+frontend/test/
+frontend/.next/
 
 # Logs
 logs
@@ -44,6 +49,7 @@ backend/.nyc_output
 .env.production.local
 .env.local
 backend/.env
+frontend/next-env.d.ts
 
 # temp directory
 .temp
